Dev trail plain (#377)
* trailer hotfix

* trailer version

* hotfix

* hotifx

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* trailer percent calculation debug

* hotfix to features

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -166,7 +166,10 @@
     "    if cv_func.pred_empty_flag == True:\n",
     "        print('no title needs to be predicted at day {}'.format(day))\n",
     "        continue\n",
-    "    \n",
+    "\n",
+    "    # print features\n",
+    "    logger.info(cv_func.X_base.columns.values)\n",
+    "\n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
     "    print('Tune parameter for day {}'.format(day))\n",
