Dev trail plain (#378)
* trailer hotfix

* trailer version

* hotfix

* hotifx

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* trailer percent calculation debug

* hotfix to features

* hotfix

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -149,12 +149,13 @@
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
     "        input_process_info = dict(prelaunch_process_info)\n",
-    "        input_percentile_used = 0\n",
+    "        input_percentile_used = 1\n",
     "    else:\n",
     "        input_process_info = dict(metadata_process_info)\n",
     "        input_percentile_used = percentile_used\n",
     "\n",
     "    # just to make the values in the dict back to the initial values\n",
+    "    percent_data_process_info = dict(percent_data_process_info)\n",
     "    percent_data_process_info['max_num_day'] = day\n",
     "    \n",
     "    # get x and y\n",
