Dev trail plain (#380)
* trailer hotfix

* trailer version

* hotfix

* hotifx

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* hotfix

* trailer percent calculation debug

* hotfix to features

* hotfix

* hotfix

* alternative version of trailer measurement

* hotfix to problems

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -20,6 +20,7 @@
     "\n",
     "# configs\n",
     "from lib.config import percent_data_process_info\n",
+    "from lib.config import prelaunch_process_info\n",
     "from lib.config import metadata_process_info\n",
     "from lib.config import default_params_dict as params_dict\n",
     "from lib.config import model_name_list\n",
@@ -67,11 +68,10 @@
    "source": [
     "logger = logging.getLogger()\n",
     "logger.info(f'Loading inputs')\n",
+    "data_list =[]\n",
     "\n",
     "s3 = boto3.resource('s3')\n",
     "bucket = s3.Bucket(input_bucket)\n",
-    "\n",
-    "data_list = []\n",
     "# Iterates through all the objects, doing the pagination for you. Each obj\n",
     "# is an ObjectSummary, so it doesn't contain the body. You'll need to call\n",
     "# get to get the whole body.\n",
@@ -168,9 +168,6 @@
     "        print('no title needs to be predicted at day {}'.format(day))\n",
     "        continue\n",
     "\n",
-    "    # print features\n",
-    "    logger.info(cv_func.X_base.columns.values)\n",
-    "\n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
     "    print('Tune parameter for day {}'.format(day))\n",
@@ -178,7 +175,6 @@
     "                          params_tuning_dict, \n",
     "                          percent_data_process_info,\n",
     "                          nfold = nfold)\n",
-    "\n",
     "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
     "    param_stats = cv_func.parameter_tuning_stats\n",
     "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
