--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -168,6 +168,8 @@
     "        print('no title needs to be predicted at day {}'.format(day))\n",
     "        continue\n",
     "\n",
+    "    print(cv_func.X_base.values)\n",
+    "\n",
     "    # tune parameter\n",
     "    logger.info('Tune parameter for day {}'.format(day))\n",
     "    print('Tune parameter for day {}'.format(day))\n",
@@ -175,6 +177,7 @@
     "                          params_tuning_dict, \n",
     "                          percent_data_process_info,\n",
     "                          nfold = nfold)\n",
+    "    \n",
     "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
     "    param_stats = cv_func.parameter_tuning_stats\n",
     "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
