Dev trailer type test (#395)
* d28 update

* trailer percent view starting from day -28

* trailer hotfix

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -139,6 +139,7 @@
     "output_flag = False\n",
     "new_title_output = pd.DataFrame()\n",
     "existing_title_output = pd.DataFrame()\n",
+    "back_consideration_date = 180\n",
     "\n",
     "for day in range(-27,27):\n",
     "    # renew the percent_data_process_info data very time\n",
@@ -149,7 +150,7 @@
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
     "        input_process_info = dict(prelaunch_process_info)\n",
-    "        input_percentile_used = 1\n",
+    "        input_percentile_used = percentile_used\n",
     "    else:\n",
     "        input_process_info = dict(metadata_process_info)\n",
     "        input_percentile_used = percentile_used\n",
@@ -174,7 +175,8 @@
     "    cv_func.parameter_tuning(model_name, \n",
     "                          params_tuning_dict, \n",
     "                          percent_data_process_info,\n",
-    "                          nfold = nfold)\n",
+    "                          nfold = nfold,\n",
+    "                          back_consideration_date = back_consideration_date)\n",
     "    \n",
     "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
     "    param_stats = cv_func.parameter_tuning_stats\n",
