Dev trailer type test (#397)
* d28 update

* trailer percent view starting from day -28

* trailer hotfix

* hotfix

* hotfix

* hotfix

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -102,7 +102,8 @@
     "# start a object\n",
     "logger.info('Setting up the prediction model')\n",
     "percentile_used = 0.8\n",
-    "nfold = 10\n",
+    "back_consideration_date = 180\n",
+    "nfold = np.floor(back_consideration_date/30)\n",
     "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])\n",
     "# movie only\n",
     "#cv_func.df = cv_func.df.loc[cv_func.df['content_category']=='movies',:]"
