--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -32,9 +32,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!pip freeze"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -86,6 +84,12 @@
     "    \n",
     "    # exclude the full null columns\n",
     "    exec(\"{0} = {0}.loc[:,{0}.isnull().sum()!={0}.shape[0]]\".format(var_name))\n",
+    "\n",
+    "    # exclude the old Mortal Kombat movie because the trailer percent view \n",
+    "    # matching matches the trailer of the new movie to the old movie\n",
+    "    exec(\"{0} = {0}.loc[{0}['match_id_platform'].\\\n",
+    "        isin(['1-GYGQBcwsaCIW2XgEAAAAL', '0-GYGQBcwsaCIW2XgEAAAAL'])==False,:]\\\n",
+    "        .reset_index(drop = True)\".format(var_name))\n",
     "    \n",
     "    # append the feature df\n",
     "    exec(\"data_list.append({0})\".format(var_name))"
@@ -104,9 +108,7 @@
     "percentile_used = 0.8\n",
     "back_consideration_date = 180\n",
     "nfold = np.floor(back_consideration_date/30)\n",
-    "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])\n",
-    "# movie only\n",
-    "#cv_func.df = cv_func.df.loc[cv_func.df['content_category']=='movies',:]"
+    "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])"
    ]
   },
   {
@@ -134,8 +136,6 @@
     "Get the prediction tarjectory over length of data\n",
     "'''\n",
     "\n",
-    "model_name = 'lgb'\n",
-    "model_name_list = ['lgb']\n",
     "percent_data_process_info['exact_X_pred'] = False\n",
     "output_flag = False\n",
     "new_title_output = pd.DataFrame()\n",
@@ -152,9 +152,13 @@
     "    if day < 1:\n",
     "        input_process_info = dict(prelaunch_process_info)\n",
     "        input_percentile_used = percentile_used\n",
+    "        model_name = 'lr'\n",
+    "        model_name_list = [model_name]\n",
     "    else:\n",
     "        input_process_info = dict(metadata_process_info)\n",
     "        input_percentile_used = percentile_used\n",
+    "        model_name = 'lgb'\n",
+    "        model_name_list = [model_name]\n",
     "\n",
     "    # just to make the values in the dict back to the initial values\n",
     "    percent_data_process_info = dict(percent_data_process_info)\n",
@@ -171,20 +175,36 @@
     "        continue\n",
     "\n",
     "    # tune parameter\n",
-    "    logger.info('Tune parameter for day {}'.format(day))\n",
-    "    print('Tune parameter for day {}'.format(day))\n",
-    "    cv_func.parameter_tuning(model_name, \n",
-    "                          params_tuning_dict, \n",
-    "                          percent_data_process_info,\n",
-    "                          nfold = nfold,\n",
-    "                          back_consideration_date = back_consideration_date)\n",
+    "    if model_name not in  ['lr', 'enet']:\n",
+    "        logger.info('Tune parameter for day {}'.format(day))\n",
+    "        print('Tune parameter for day {}'.format(day))\n",
+    "        cv_func.parameter_tuning(model_name, \n",
+    "                            params_tuning_dict, \n",
+    "                            percent_data_process_info,\n",
+    "                            nfold = nfold,\n",
+    "                            back_consideration_date = back_consideration_date)\n",
+    "        \n",
+    "        params_dict = cv_func.min_smape_param['min_smape_original']\n",
+    "        param_stats = cv_func.parameter_tuning_stats\n",
+    "        logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
+    "        logger.info('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
+    "        print('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
+    "        print('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
     "    \n",
-    "    params_dict = cv_func.min_smape_param['min_smape_original']\n",
-    "    param_stats = cv_func.parameter_tuning_stats\n",
-    "    logger.info('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
-    "    logger.info('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
-    "    print('SMAPE for all titles {}'.format(param_stats['min_smape_all']))\n",
-    "    print('SMAPE for the originals {}'.format(param_stats['min_smape_original']))\n",
+    "    else:\n",
+    "        logger.info('Do cross prediction for day {}'.format(day))\n",
+    "        print('Do cross prediction for day {}'.format(day))\n",
+    "        cv_func.cross_prediction(\n",
+    "                         model_name_list, \n",
+    "                         params_dict, \n",
+    "                         percent_data_process_info, \n",
+    "                         nfold = 6, \n",
+    "                         back_consideration_date = 180)\n",
+    "        \n",
+    "        logger.info('SMAPE for all titles {}'.format(cv_func.output['smape_' + model_name].mean()))\n",
+    "        logger.info('SMAPE for the originals {}'.format(cv_func.output.loc[cv_func.output['program_type']==1,'smape_' + model_name].mean()))\n",
+    "        print('SMAPE for all titles {}'.format(cv_func.output['smape_' + model_name].mean()))\n",
+    "        print('SMAPE for the originals {}'.format(cv_func.output.loc[cv_func.output['program_type']==1,'smape_' + model_name].mean()))\n",
     "    \n",
     "    # make prediction\n",
     "    logger.info('Making prediction for day {}'.format(day))\n",
@@ -195,13 +215,13 @@
     "    \n",
     "    # process the output\n",
     "    cur_new_title_output = cv_func.new_title_output\n",
-    "    pred_column = cur_new_title_output.columns[cur_new_title_output.columns.str.contains('lgb')][0]\n",
+    "    pred_column = cur_new_title_output.columns[cur_new_title_output.columns.str.contains(model_name)][0]\n",
     "    cur_new_title_output['pred_day'] = day\n",
     "    cur_new_title_output = cur_new_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
     "    \n",
     "    # process the existing titles\n",
     "    cur_existing_title_output = cv_func.output\n",
-    "    pred_column = cur_existing_title_output.columns[cur_existing_title_output.columns.str.contains('lgb')][0]\n",
+    "    pred_column = cur_existing_title_output.columns[cur_existing_title_output.columns.str.contains(model_name)][0]\n",
     "    cur_existing_title_output['pred_day'] = day\n",
     "    cur_existing_title_output = cur_existing_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
     "    \n",
@@ -236,8 +256,8 @@
     "                                                ,'target'\n",
     "                                                ,'pred_day'\n",
     "                                                ,'percent_view_pred'\n",
-    "                                                ,'smape_lgb'\n",
-    "                                                ,'mae_lgb'\n",
+    "                                                ,'smape_'  + model_name\n",
+    "                                                ,'mae_'  + model_name\n",
     "                                                ,'fold']]"
    ]
   },
