--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -151,11 +151,15 @@
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
     "        input_process_info = dict(prelaunch_process_info)\n",
+    "        percent_data_process_info['target_log_transformation'] = False\n",
+    "        percent_data_process_info['log_ratio_transformation'] = False\n",
     "        input_percentile_used = percentile_used\n",
     "        model_name = 'lr'\n",
     "        model_name_list = [model_name]\n",
     "    else:\n",
     "        input_process_info = dict(metadata_process_info)\n",
+    "        percent_data_process_info['target_log_transformation'] = True\n",
+    "        percent_data_process_info['log_ratio_transformation'] = True\n",
     "        input_percentile_used = percentile_used\n",
     "        model_name = 'lgb'\n",
     "        model_name_list = [model_name]\n",
@@ -248,6 +252,10 @@
     "if existing_title_output.shape[0]>0:           \n",
     "    existing_title_output = existing_title_output.sort_values(['match_id_platform','pred_day'])\n",
     "    existing_title_output['platform_name'] = existing_title_output['match_id_platform'].apply(lambda x: x[0])\n",
+    "    existing_title_output = existing_title_output.rename(columns = {'smape_lgb':'smape'\n",
+    "                                                                    ,'smape_lr':'smape'\n",
+    "                                                                    ,'mae_lgb':'mae'\n",
+    "                                                                    ,'mae_lr':'mae'})\n",
     "    existing_title_output = existing_title_output[['title_name'\n",
     "                                                ,'match_id'\n",
     "                                                ,'match_id_platform'\n",
@@ -256,8 +264,8 @@
     "                                                ,'target'\n",
     "                                                ,'pred_day'\n",
     "                                                ,'percent_view_pred'\n",
-    "                                                ,'smape_'  + model_name\n",
-    "                                                ,'mae_'  + model_name\n",
+    "                                                ,'smape'\n",
+    "                                                ,'mae'\n",
     "                                                ,'fold']]"
    ]
   },
