--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -87,8 +87,9 @@
     "\n",
     "    # exclude the old Mortal Kombat movie because the trailer percent view \n",
     "    # matching matches the trailer of the new movie to the old movie\n",
+    "    # exclude Tom & Jerry due to unresolvable data issue\n",
     "    exec(\"{0} = {0}.loc[{0}['match_id_platform'].\\\n",
-    "        isin(['1-GYGQBcwsaCIW2XgEAAAAL', '0-GYGQBcwsaCIW2XgEAAAAL'])==False,:]\\\n",
+    "        isin(['1-GYGQBcwsaCIW2XgEAAAAL', '0-GYGQBcwsaCIW2XgEAAAAL', '1-GYEb9QwLgFF9_ZwEAAAA7', '0-GYEb9QwLgFF9_ZwEAAAA7'])==False,:]\\\n",
     "        .reset_index(drop = True)\".format(var_name))\n",
     "    \n",
     "    # append the feature df\n",
