--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -204,7 +204,7 @@
     "                         params_dict, \n",
     "                         percent_data_process_info, \n",
     "                         nfold = 6, \n",
-    "                         back_consideration_date = 180)\n",
+    "                         back_consideration_date = back_consideration_date)\n",
     "        \n",
     "        logger.info('SMAPE for all titles {}'.format(cv_func.output['smape_' + model_name].mean()))\n",
     "        logger.info('SMAPE for the originals {}'.format(cv_func.output.loc[cv_func.output['program_type']==1,'smape_' + model_name].mean()))\n",
