--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -229,6 +229,13 @@
     "    pred_column = cur_existing_title_output.columns[cur_existing_title_output.columns.str.contains(model_name)][0]\n",
     "    cur_existing_title_output['pred_day'] = day\n",
     "    cur_existing_title_output = cur_existing_title_output.rename(columns = {pred_column:'percent_view_pred'})\n",
+    "    cur_existing_title_output = cur_existing_title_output.rename(columns = {'smape_lgb':'smape'\n",
+    "                                                                    ,'smape_lr':'smape'\n",
+    "                                                                    ,'smape_enet':'smape'\n",
+    "                                                                    ,'mae_lgb':'mae'\n",
+    "                                                                    ,'mae_lr':'mae'\n",
+    "                                                                    ,'mae_enet':'mae'\n",
+    "                                                                    })\n",
     "    \n",
     "    if output_flag:\n",
     "        new_title_output = pd.concat([new_title_output,cur_new_title_output], axis = 0)\n",
@@ -253,10 +260,6 @@
     "if existing_title_output.shape[0]>0:           \n",
     "    existing_title_output = existing_title_output.sort_values(['match_id_platform','pred_day'])\n",
     "    existing_title_output['platform_name'] = existing_title_output['match_id_platform'].apply(lambda x: x[0])\n",
-    "    existing_title_output = existing_title_output.rename(columns = {'smape_lgb':'smape'\n",
-    "                                                                    ,'smape_lr':'smape'\n",
-    "                                                                    ,'mae_lgb':'mae'\n",
-    "                                                                    ,'mae_lr':'mae'})\n",
     "    existing_title_output = existing_title_output[['title_name'\n",
     "                                                ,'match_id'\n",
     "                                                ,'match_id_platform'\n",
