--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -203,7 +203,7 @@
     "                         model_name_list, \n",
     "                         params_dict, \n",
     "                         percent_data_process_info, \n",
-    "                         nfold = 6, \n",
+    "                         nfold = nfold, \n",
     "                         back_consideration_date = back_consideration_date)\n",
     "        \n",
     "        logger.info('SMAPE for all titles {}'.format(cv_func.output['smape_' + model_name].mean()))\n",
