--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -3,8 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -25,44 +23,44 @@
     "from lib.config import default_params_dict as params_dict\n",
     "from lib.config import model_name_list\n",
     "from lib.config import params_tuning_dict"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Reading Data "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Reading data from multiple sources, with the corresponding query"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Step 1 of the Prediction Process: Getting Data\n",
     "Step 1.1: update the funnel metrics by Sagemaker ipynb file 'query_pipeline' under the '/query' folder\n",
     "\n",
     "Step 1.2: run each of the query in the '/day28_prediction/query/' to extract each input csv below"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "logger = logging.getLogger()\n",
     "logger.info(f'Loading inputs')\n",
@@ -94,15 +92,13 @@
     "    \n",
     "    # append the feature df\n",
     "    exec(\"data_list.append({0})\".format(var_name))"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "# start a object\n",
     "logger.info('Setting up the prediction model')\n",
@@ -110,28 +106,30 @@
     "back_consideration_date = 180\n",
     "nfold = np.floor(back_consideration_date/30)\n",
     "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# New Title Prediction, Post Launch "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Step 2: Make Prediction\n",
     "Note: Because it is a post launch prediction, only the titles with partial percent view and view through portion data will be predicted"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "'''\n",
     "Get the prediction tarjectory over length of data\n",
@@ -157,12 +155,19 @@
     "        input_percentile_used = percentile_used\n",
     "        model_name = 'lr'\n",
     "        model_name_list = [model_name]\n",
-    "    else:\n",
+    "    elif day<14:\n",
     "        input_process_info = dict(metadata_process_info)\n",
     "        percent_data_process_info['target_log_transformation'] = True\n",
     "        percent_data_process_info['log_ratio_transformation'] = True\n",
     "        input_percentile_used = percentile_used\n",
     "        model_name = 'lgb'\n",
+    "        model_name_list = [model_name]\n",
+    "    else:\n",
+    "        input_process_info = dict(metadata_process_info)\n",
+    "        percent_data_process_info['target_log_transformation'] = False\n",
+    "        percent_data_process_info['log_ratio_transformation'] = False\n",
+    "        input_percentile_used = percentile_used\n",
+    "        model_name = 'enet'\n",
     "        model_name_list = [model_name]\n",
     "\n",
     "    # just to make the values in the dict back to the initial values\n",
@@ -271,38 +276,38 @@
     "                                                ,'smape'\n",
     "                                                ,'mae'\n",
     "                                                ,'fold']]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Write csvs to S3"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Step 3: Write the prediction result to S3"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def to_s3(filename, output_bucket, content):\n",
     "    client = boto3.client('s3')\n",
     "    client.put_object(Bucket=output_bucket, Key=filename, Body=content)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "logger.info('Writing new title predictions over time to S3 as an csv file')\n",
     "print('Writing new title predictions over time to S3 as an csv file')\n",
@@ -313,13 +318,13 @@
     "filename = 'output_percent_view/new_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "logger.info('Writing existing title predictions over time to S3 as an csv file')\n",
     "print('Writing existing title predictions over time to S3 as an csv file')\n",
@@ -330,7 +335,9 @@
     "filename = 'output_percent_view/existing_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
