wiki page view feature (#434)

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -153,7 +153,7 @@
     "        percent_data_process_info['target_log_transformation'] = False\n",
     "        percent_data_process_info['log_ratio_transformation'] = False\n",
     "        input_percentile_used = percentile_used\n",
-    "        model_name = 'lr'\n",
+    "        model_name = 'lgb'\n",
     "        model_name_list = [model_name]\n",
     "    elif day<14:\n",
     "        input_process_info = dict(metadata_process_info)\n",
