--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -125,6 +125,9 @@
     "df['max_window'] = 14\n",
     "df.loc[~df.hourspct21d.isnull(), 'max_window'] = 21\n",
     "df.loc[~df.hourspct28d.isnull(), 'max_window'] = 28\n",
+    "df.loc[~df.hourspct8w.isnull(), 'max_window'] = 56\n",
+    "df.loc[~df.hourspct13w.isnull(), 'max_window'] = 91\n",
+    "df.loc[~df.hourspct26w.isnull(), 'max_window'] = 182\n",
     "\n",
     "df = df.drop(columns=['licensor_agg',\n",
     "                     'match_id_platform',\n",
@@ -147,6 +150,9 @@
     "df['logit_hourspct14d'] = logit(df['hourspct14d']/100.0)\n",
     "df['logit_hourspct21d'] = logit(df['hourspct21d']/100.0)\n",
     "df['logit_hourspct28d'] = logit(df['hourspct28d']/100.0)\n",
+    "df['logit_hourspct8w'] = logit(df['hourspct8w']/100.0)\n",
+    "df['logit_hourspct13w'] = logit(df['hourspct13w']/100.0)\n",
+    "df['logit_hourspct26w'] = logit(df['hourspct26w']/100.0)\n",
     "df['logit_hourspct52w'] = logit(df['hourspct52w']/100.0)"
    ]
   },
@@ -226,6 +232,9 @@
     "         'logit_hourspct14d',\n",
     "         'logit_hourspct21d',\n",
     "         'logit_hourspct28d',\n",
+    "         'logit_hourspct8w',\n",
+    "         'logit_hourspct13w',\n",
+    "         'logit_hourspct26w',\n",
     "         'season_number_adj',\n",
     "         'is_original',\n",
     "         'is_series',\n",
