--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -150,7 +150,7 @@
     "    # determine prelaunch or postlaunch\n",
     "    if day < 1:\n",
     "        input_process_info = dict(prelaunch_process_info)\n",
-    "        percent_data_process_info['target_log_transformation'] = False\n",
+    "        percent_data_process_info['target_log_transformation'] = True\n",
     "        percent_data_process_info['log_ratio_transformation'] = False\n",
     "        input_percentile_used = percentile_used\n",
     "        model_name = 'lgb'\n",
