Dev wiki view (#459)
* wiki page view feature

* main signal changes

* hotfix

* hotfix

* hotfix

* remove popcorn_ind feature

* log feature function

* excluding werid titles

--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -86,8 +86,18 @@
     "    # exclude the old Mortal Kombat movie because the trailer percent view \n",
     "    # matching matches the trailer of the new movie to the old movie\n",
     "    # exclude Tom & Jerry due to unresolvable data issue\n",
+    "    # exclude its a Sin S1 because it has weirdly high view counts, and maybe popular in UK and India but US\n",
+    "    # exclude Tenent since it is offered in theater before\n",
+    "    # exclude Zack Synder's Cut, Grey\n",
+    "    # exclude Contagion, it has a high wiki view due to pandemic, but did not reflect in viewership\n",
+    "    # exclude West worlds on Max, they have high view but low percent view\n",
+    "    # exclude Joker, has high view but low percent view\n",
+    "    # exclude XXX movie since it has high view but low percent view, maybe popular in LATAM or EMEA\n",
     "    exec(\"{0} = {0}.loc[{0}['match_id_platform'].\\\n",
-    "        isin(['1-GYGQBcwsaCIW2XgEAAAAL', '0-GYGQBcwsaCIW2XgEAAAAL', '1-GYEb9QwLgFF9_ZwEAAAA7', '0-GYEb9QwLgFF9_ZwEAAAA7'])==False,:]\\\n",
+    "        isin(['1-GYGQBcwsaCIW2XgEAAAAL', '1-GYEq4eApHYpA4cwEAAAAC', '1-GYFJ_1g7SgX-vswEAAAAS', '1-GXbHrSAgxDoNiYAEAAAbh',\\\n",
+    "        '1-GYBNNbABUnb1QoQEAAABA-1', '0-GYGQBcwsaCIW2XgEAAAAL', '1-GYEb9QwLgFF9_ZwEAAAA7',\\\n",
+    "        '0-GYEb9QwLgFF9_ZwEAAAA7', '1-GV7xwpQNK8MJfPwEAAAG_-2', '1-GV7xwpQNK8MJfPwEAAAG_-3',\\\n",
+    "        '1-GV7xwpQNK8MJfPwEAAAG_-1', '1-GXmpVdwe6e54_wwEAADHg', '1-GYTqmVAzWYFS6cAEAAAC9'])==False,:]\\\n",
     "        .reset_index(drop = True)\".format(var_name))\n",
     "    \n",
     "    # append the feature df\n",
