--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -220,12 +220,14 @@
    "source": [
     "# random cutting of hourspct values for model to learn null values\n",
     "# 10% set as null\n",
-    "df_mask = pd.DataFrame(np.random.choice([0,None], size=[len(df_fulldata),5], p=[0.9,0.1]),\n",
+    "rng = np.random.default_rng(15)\n",
+    "df_mask = pd.DataFrame(rng.choice([0,np.nan], size=[len(df_fulldata),5], p=[0.9,0.1]),\n",
     "                       columns=['logit_hourspct21d',\n",
     "                                'logit_hourspct28d',\n",
     "                                'logit_hourspct8w',\n",
     "                                'logit_hourspct13w',\n",
-    "                                'logit_hourspct26w'])\n",
+    "                                'logit_hourspct26w'],\n",
+    "                       index=df_fulldata.index)\n",
     "\n",
     "df_fulldata.loc[:,['logit_hourspct21d','logit_hourspct28d','logit_hourspct8w','logit_hourspct13w','logit_hourspct26w']] += df_mask"
    ]
