--- a/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
+++ b/Sagemaker_Models/hourspct_predictions/pct_hours_prediction.ipynb
@@ -220,8 +220,13 @@
    "source": [
     "# random cutting of hourspct values for model to learn null values\n",
     "# 10% set as null\n",
-    "rng = np.random.default_rng(15)\n",
-    "df_mask = pd.DataFrame(rng.choice([0,np.nan], size=[len(df_fulldata),5], p=[0.9,0.1]),\n",
+    "\n",
+    "# only works in numpy >= 1.17\n",
+    "#rng = np.random.default_rng(15)\n",
+    "#df_mask = pd.DataFrame(rng.choice([0,np.nan], size=[len(df_fulldata),5], p=[0.9,0.1]),\n",
+    "\n",
+    "np.random.seed(242)\n",
+    "df_mask = pd.DataFrame(np.random.choice([0,np.nan], size=[len(df_fulldata),5], p=[0.9,0.1]),\n",
     "                       columns=['logit_hourspct21d',\n",
     "                                'logit_hourspct28d',\n",
     "                                'logit_hourspct8w',\n",
