--- a/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
+++ b/Sagemaker_Models/post_launch_metrics/PrePostLaunch_28d.ipynb
@@ -3,6 +3,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -23,44 +25,44 @@
     "from lib.config import default_params_dict as params_dict\n",
     "from lib.config import model_name_list\n",
     "from lib.config import params_tuning_dict"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Reading Data "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Reading data from multiple sources, with the corresponding query"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Step 1 of the Prediction Process: Getting Data\n",
     "Step 1.1: update the funnel metrics by Sagemaker ipynb file 'query_pipeline' under the '/query' folder\n",
     "\n",
     "Step 1.2: run each of the query in the '/day28_prediction/query/' to extract each input csv below"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logger = logging.getLogger()\n",
     "logger.info(f'Loading inputs')\n",
@@ -102,13 +104,15 @@
     "    \n",
     "    # append the feature df\n",
     "    exec(\"data_list.append({0})\".format(var_name))"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
     "# start a object\n",
     "logger.info('Setting up the prediction model')\n",
@@ -116,30 +120,28 @@
     "back_consideration_date = 180\n",
     "nfold = np.floor(back_consideration_date/30)\n",
     "cv_func = ModelMain(data_list, metadata_process_info['label_columns'], metadata_process_info['num_columns'])"
-   ],
-   "outputs": [],
-   "metadata": {
-    "scrolled": true
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# New Title Prediction, Post Launch "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Step 2: Make Prediction\n",
     "Note: Because it is a post launch prediction, only the titles with partial percent view and view through portion data will be predicted"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "'''\n",
     "Get the prediction tarjectory over length of data\n",
@@ -279,38 +281,38 @@
     "                                                ,'smape'\n",
     "                                                ,'mae'\n",
     "                                                ,'fold']]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Write csvs to S3"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Step 3: Write the prediction result to S3"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def to_s3(filename, output_bucket, content):\n",
     "    client = boto3.client('s3')\n",
     "    client.put_object(Bucket=output_bucket, Key=filename, Body=content)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logger.info('Writing new title predictions over time to S3 as an csv file')\n",
     "print('Writing new title predictions over time to S3 as an csv file')\n",
@@ -321,13 +323,13 @@
     "filename = 'output_percent_view/new_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logger.info('Writing existing title predictions over time to S3 as an csv file')\n",
     "print('Writing existing title predictions over time to S3 as an csv file')\n",
@@ -338,19 +340,26 @@
     "filename = 'output_percent_view/existing_title_prediction.csv'\n",
     "\n",
     "to_s3(filename, output_bucket, content)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.3 64-bit ('usr')",
-   "name": "python373jvsc74a57bd05edc29c2ed010d6458d71a83433b383a96a8cbd3efe8531bc90c4b8a5b8bcec9"
+   "display_name": "conda_amazonei_mxnet_p27",
+   "language": "python",
+   "name": "conda_amazonei_mxnet_p27"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": ""
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   },
   "metadata": {
    "interpreter": {
